@@ -7,34 +7,48 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
 
 @Configuration
 public class CorsConfig {
+    private static final String LOCAL_DEVELOPMENT_FRONTEND_URL = "http://localhost:5173";
 
+    private final AppProperties appProperties;
+
+    public CorsConfig(AppProperties appProperties) {
+        this.appProperties = appProperties;
+    }
+
+    /**
+     * Giới hạn truy cập từ trình duyệt theo frontend origin được cấu hình cho từng môi trường.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        String frontEndUrl = System.getenv("FRONT_END_URL");
-        List<String> origins = (frontEndUrl != null && !frontEndUrl.trim().isEmpty())
-                ? Arrays.asList("http://localhost:5173", "http://localhost:3000", frontEndUrl)
-                : Arrays.asList("http://localhost:5173", "http://localhost:3000");
-
         CorsConfiguration configuration = new CorsConfiguration();
-        // Fallback to allow any origin pattern if exact origin is tricky to configure on Azure
-        if (origins.size() == 2) { 
-            // If FRONT_END_URL wasn't set, allow all to prevent production crash
-            configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        } else {
-            configuration.setAllowedOrigins(origins);
-            configuration.setAllowedOriginPatterns(Arrays.asList(frontEndUrl, "https://*.azurestaticapps.net"));
-        }
+        configuration.setAllowedOrigins(getAllowedOrigins());
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With"
+        ));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    private List<String> getAllowedOrigins() {
+        Set<String> allowedOrigins = new LinkedHashSet<>();
+        allowedOrigins.add(appProperties.getFrontendUrl());
+        allowedOrigins.add(LOCAL_DEVELOPMENT_FRONTEND_URL);
+        return List.copyOf(allowedOrigins);
     }
 }
